Fixed gap above nav

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,8 @@
 
 body {
 	background-color: black;
+	margin: 0;
+	padding: 0;
 }
 
 @media (max-width: 639px) {
